内存分配测试代码12-01